--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^1.9.3",
     "@types/redux-logger": "^3.0.9",
     "@types/unsplash-js": "^7.0.0",
+    "an-array-of-english-words": "^2.0.0",
     "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
