--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_UNSPLASH_ACCESS_KEY ="9MBBOE7YIiIa_z3GDBm-HObAf8SIwt7-UxtHpmd-34U"
+VITE_APP_API_KEY ="9MBBOE7YIiIa_z3GDBm-HObAf8SIwt7-UxtHpmd-34U"
 REACT_APP_UNSPLASH_SECRET_KEY = "qXX-yZuWz3XDKlRUBIv9CHY6GFI49O1tpnlbY23egAo"
