--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "unsplash-js": "^7.0.15"
   },
   "devDependencies": {
+    "react-error-overlay": "6.0.9",
     "@types/node": "^18.14.2",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
