--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "author": {
+    "name": "Ayan Shrivastava",
+    "email": "ayanshrivastava2020@gmail.com"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
