--- a/package.json
+++ b/package.json
@@ -26,17 +26,18 @@
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
+    "react-share": "^4.4.1",
     "redux-logger": "^3.0.6",
     "styled-components": "^5.3.6",
     "unsplash-js": "^7.0.15"
   },
   "devDependencies": {
-    "react-error-overlay": "6.0.9",
     "@types/node": "^18.14.2",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.1.0",
+    "react-error-overlay": "6.0.9",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
